--- a/src/stylesheets/mobile.less
+++ b/src/stylesheets/mobile.less
@@ -1,4 +1,4 @@
-html.sk-widget-opened {
+html {
     &,
     body {
         @media (max-width: @screen-sm-min) {
@@ -12,13 +12,9 @@ html.sk-widget-opened {
                 #sk-container {
                     top: 0;
                     z-index: 10000;
+                    margin-bottom: 0;
 
                     #sk-header {
-                        #sk-settings-handle {
-                            height: 40px;
-                            width: 40px;
-                            right: 40px;
-                        }
                         .sk-close-handle {
                             display: block;
                             height: 40px;
